--- a/assets/package.json
+++ b/assets/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react": "^11.2.7",
     "@types/graphql": "^14.0.5",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.12",
@@ -13,12 +14,14 @@
     "@types/react-router-dom": "^4.3.1",
     "aws-amplify": "^1.0.10",
     "bootstrap": "^3.3.7",
+    "jest-dom": "^4.0.0",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^3.2.1"
   },
   "scripts": {
@@ -27,7 +30,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest-extended": "^0.11.5"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
